--- a/style.css
+++ b/style.css
@@ -13,8 +13,6 @@ body {
   background-size: cover;
   display: flex;
   flex-direction: column;
-  /* position: relative; */
-  /* overflow-x: hidden; */
 }
 
 .wrapper {
@@ -47,6 +45,7 @@ main {
 .carousel-wrapper {
   width: 100%;
   height: 100%;
+  display: none;
 }
 
 #about {
@@ -56,7 +55,6 @@ main {
   justify-content: center;
   align-items: center;
 }
-
 
 .content {
   position: absolute;
@@ -75,7 +73,6 @@ footer {
   font-weight: 700;
   letter-spacing: 0.035rem;
 }
-
 
 .fade-transition {
   transition: all 2s ease;
